--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.2",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
